deploy: b0e428b8b04db8fd5685933ee21b56fcb19100c6

--- a/proof/text.html
+++ b/proof/text.html
@@ -149,7 +149,7 @@
       <div class="box">
 	<div class="box-title">Noto-Sans-Imperial-Aramaic-Regular 14pt</div>
 	<span class="Noto-Sans-Imperial-Aramaic-Regular" style="font-size: 14pt">
-	  𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀
+	  𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙
           </span>
        </div>
     
