deploy: 03e1eafe6c740b9b2bd8b6ee40f702aa2304bd93

--- a/fontbakery/googlefonts-NotoSansImperialAramaic-report.html
+++ b/fontbakery/googlefonts-NotoSansImperialAramaic-report.html
@@ -83,20 +83,14 @@
                 <td>0%</td>
                 <td>1%</td>
                 <td>4%</td>
-                <td>66%</td>
+                <td>65%</td>
                 <td>4%</td>
-                <td>61%</td>
+                <td>60%</td>
             </tr>
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; 🔥⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
-<h3>Version number has increased since previous release on Google Fonts?</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/version_bump&gt;</div>
-
-<details><summary>🔥 <strong>fonts/NotoSansImperialAramaic/googlefonts/ttf/NotoSansImperialAramaic-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Version number 2.0 is equal to version on Google Fonts.</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Version number 2.0 is equal to version on Google Fonts GitHub repo.</p>
-</span></li></ul></div></details>
+<h2>&lt;Section: Google Fonts&gt; ⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Combined length of family and style must not exceed 27 characters.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/name/family_and_style_max_length&gt;</div>
 
@@ -137,6 +131,12 @@ FONT_FAMILY_NAME = 'Noto Sans Imperial Aramaic' / SUBFAMILY_NAME = 'Regular'</p>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/dotted_circle&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/NotoSansImperialAramaic/googlefonts/ttf/NotoSansImperialAramaic-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>No dotted circle glyph present [code: missing-dotted-circle]</p>
+</span></li></ul></div></details>
+<h2>&lt;Section: fontbakery.profiles.head&gt; 🔥⏩</h2>
+<h3>Checking font version fields (head and name table).</h3>
+<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/font_version&gt;</div>
+
+<details><summary>🔥 <strong>fonts/NotoSansImperialAramaic/googlefonts/ttf/NotoSansImperialAramaic-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>head version is &quot;2.00101&quot; while name version string (for platform 3, encoding 1) is &quot;Version 2.000; ttfautohint (v1.8.4.7-5d5b)&quot;. [code: mismatch]</p>
 </span></li></ul></div></details>
 <h2>&lt;Section: Outline Correctness Checks&gt; ⚠️</h2>
 <h3>Are any segments inordinately short?</h3>
