--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/imperial-aramaic/commit/c490354
-"><code>c490354
+					<a href="https://github.com/notofonts/imperial-aramaic/commit/8c76b7a
+"><code>8c76b7a
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙 𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙</h1>
+			<h1 class="display-3 heading noto">𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀 𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -69,6 +69,9 @@
 				<h4>Noto Sans Imperial Aramaic</h4>
 				<div class="row align-items-start"><ul>
 <li class="li-0">full<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansImperialAramaic/full/otf/NotoSansImperialAramaic-Regular.otf"> NotoSansImperialAramaic-Regular.otf</a></li>
+ </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansImperialAramaic/full/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
  </ul>
@@ -79,6 +82,9 @@
  </ul>
  </ul>
 <li class="li-0">unhinted<ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansImperialAramaic/unhinted/otf/NotoSansImperialAramaic-Regular.otf"> NotoSansImperialAramaic-Regular.otf</a></li>
+ </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansImperialAramaic/unhinted/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
  </ul>
@@ -105,26 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansImperialAramaic-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansImperialAramaic-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSansImperialAramaic/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSansImperialAramaic/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSansImperialAramaic/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSansImperialAramaic/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
