--- a/qa/NotoSansImperialAramaic/NotoSansImperialAramaic-Regular-wght-400-diffenator.html
+++ b/qa/NotoSansImperialAramaic/NotoSansImperialAramaic-Regular-wght-400-diffenator.html
@@ -142,7 +142,7 @@
 
 	  
 	    @font-face{
-    src: url(old-NotoSansImperialAramaic-Regular.ttf);
+    src: url("old-NotoSansImperialAramaic-Regular.ttf");
     font-family: "old font";
     font-weight: 400;
     
@@ -152,7 +152,7 @@
 
 	  
 	    @font-face{
-    src: url(new-NotoSansImperialAramaic-Regular.ttf);
+    src: url("new-NotoSansImperialAramaic-Regular.ttf");
     font-family: "new font";
     font-weight: 400;
     
@@ -265,7 +265,7 @@
 
     </div>
   
-<script>var fontdiff = {"hhea": {"caretSlopeRise": [1, 1000]}, "OS/2": {"usMaxContext": [0, 1]}, "head": {"modified": [3746614807, 3796042417], "checkSumAdjustment": [545605768, 1188997842]}, "name": {"17/3/1/1033": [null, "Regular"]}};</script>
+<script>var fontdiff = {"head": {"checkSumAdjustment": [545605768, 1183686848], "modified": [3746614807, 3798697849], "fontRevision": [2.001007080078125, 2.0019989013671875]}, "OS/2": {"usMaxContext": [0, 1]}, "hhea": {"caretSlopeRise": [1, 1000]}, "name": {"17/3/1/1033": [null, "Regular"]}};</script>
 
     </div>
 </body>
