--- a/qa/NotoSansImperialAramaic/Regular-diffbrowsers_waterfall.html
+++ b/qa/NotoSansImperialAramaic/Regular-diffbrowsers_waterfall.html
@@ -141,7 +141,7 @@
 
 	  
 	    @font-face{
-    src: url(old-NotoSansImperialAramaic-Regular.ttf);
+    src: url("old-NotoSansImperialAramaic-Regular.ttf");
     font-family: "old Noto Sans Imperial Aramaic";
     font-weight: 400;
     
@@ -151,7 +151,7 @@
 
 	  
 	    @font-face{
-    src: url(new-NotoSansImperialAramaic-Regular.ttf);
+    src: url("new-NotoSansImperialAramaic-Regular.ttf");
     font-family: "new Noto Sans Imperial Aramaic";
     font-weight: 400;
     
