--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/imperial-aramaic/commit/8c76b7a
-"><code>8c76b7a
+					<a href="https://github.com/notofonts/imperial-aramaic/commit/5a7b7cc
+"><code>5a7b7cc
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀 𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀</h1>
+			<h1 class="display-3 heading noto">𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙 𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,6 +68,11 @@
 				
 				<h4>Noto Sans Imperial Aramaic</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansImperialAramaic/googlefonts/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">full<ul>
 <li class="li-1">otf<ul>
 <li><a href="fonts/NotoSansImperialAramaic/full/otf/NotoSansImperialAramaic-Regular.otf"> NotoSansImperialAramaic-Regular.otf</a></li>
@@ -76,9 +81,9 @@
 <li><a href="fonts/NotoSansImperialAramaic/full/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
  </ul>
  </ul>
-<li class="li-0">googlefonts<ul>
+<li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansImperialAramaic/googlefonts/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
+<li><a href="fonts/NotoSansImperialAramaic/hinted/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">unhinted<ul>
@@ -87,11 +92,6 @@
  </ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSansImperialAramaic/unhinted/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">hinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansImperialAramaic/hinted/ttf/NotoSansImperialAramaic-Regular.ttf"> NotoSansImperialAramaic-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
