--- a/proof/NotoSansImperialAramaic/Regular-diffbrowsers_waterfall.html
+++ b/proof/NotoSansImperialAramaic/Regular-diffbrowsers_waterfall.html
@@ -145,7 +145,7 @@
 
 	  
 	    @font-face{
-    src: url(NotoSansImperialAramaic-Regular.ttf);
+    src: url("NotoSansImperialAramaic-Regular.ttf");
     font-family: "Noto Sans Imperial Aramaic";
     font-weight: 400;
     
