--- a/qa/NotoSansImperialAramaic/Regular-diffbrowsers_text.html
+++ b/qa/NotoSansImperialAramaic/Regular-diffbrowsers_text.html
@@ -141,7 +141,7 @@
 
 	  
 	    @font-face{
-    src: url(old-NotoSansImperialAramaic-Regular.ttf);
+    src: url("old-NotoSansImperialAramaic-Regular.ttf");
     font-family: "old Noto Sans Imperial Aramaic";
     font-weight: 400;
     
@@ -151,7 +151,7 @@
 
 	  
 	    @font-face{
-    src: url(new-NotoSansImperialAramaic-Regular.ttf);
+    src: url("new-NotoSansImperialAramaic-Regular.ttf");
     font-family: "new Noto Sans Imperial Aramaic";
     font-weight: 400;
     
@@ -211,7 +211,7 @@
   
     <div class="box">
       <div class="box-title">old-Regular 20pt</div>
-	<div contenteditable=true spellcheck="false" class="box-text old-Regular" dir="auto" style="font-size: 20pt">𐡁𐡛𐡚𐡘 𐡋𐡀 𐡋𐡀𐡐 𐡄𐡅 𐡉𐡅𐡌 𐡋𐡐𐡇𐡍𐡎 𐡔𐡍𐡕 𐡜𐡚𐡙 𐡀𐡓𐡕𐡇𐡔𐡎𐡔 𐡌𐡋𐡊𐡀 𐡐𐡉𐡉𐡏 𐡀𐡓𐡃𐡉𐡊𐡋 𐡋𐡌𐡁𐡈𐡇𐡉𐡄 𐡆𐡉 𐡋𐡃𐡂𐡋 𐡁𐡀𐡉𐡒𐡓𐡀</div>
+	<div contenteditable=true spellcheck="false" class="box-text old-Regular" dir="auto" style="font-size: 20pt">𐡊𐡋𐡁𐡓 𐡍𐡔 𐡌𐡍 𐡎𐡁𐡁 𐡌𐡅𐡃𐡉𐡕𐡀 𐡁𐡀𐡉𐡒𐡓𐡀 𐡋𐡊𐡋𐡄 𐡐𐡋𐡈𐡀 𐡃𐡆𐡃𐡒𐡀 𐡉𐡁𐡃𐡏𐡍𐡀 𐡌𐡇𐡉𐡃𐡀 𐡂𐡅 𐡁𐡛𐡚𐡘 𐡜𐡚𐡙</div>
     </div>
   
 
