--- a/qa/NotoSansImperialAramaic/NotoSansImperialAramaic-Regular-wght-400-diffenator.html
+++ b/qa/NotoSansImperialAramaic/NotoSansImperialAramaic-Regular-wght-400-diffenator.html
@@ -265,7 +265,7 @@
 
     </div>
   
-<script>var fontdiff = {"head": {"checkSumAdjustment": [545605768, 1183686848], "modified": [3746614807, 3798697849], "fontRevision": [2.001007080078125, 2.0019989013671875]}, "OS/2": {"usMaxContext": [0, 1]}, "hhea": {"caretSlopeRise": [1, 1000]}, "name": {"17/3/1/1033": [null, "Regular"]}};</script>
+<script>var fontdiff = {"OS/2": {"usMaxContext": [0, 1]}, "head": {"modified": [3746614807, 3798703064], "checkSumAdjustment": [545605768, 1183676414], "fontRevision": [2.001007080078125, 2.0019989013671875]}, "hhea": {"caretSlopeRise": [1, 1000]}, "name": {"17/3/1/1033": [null, "Regular"], "5/3/1/1033": ["Version 2.001", "Version 2.002"], "3/3/1/1033": ["2.001;GOOG;NotoSansImperialAramaic-Regular", "2.002;GOOG;NotoSansImperialAramaic-Regular"]}};</script>
 
     </div>
 </body>
